[package]
name = "rust-server"
version = "0.1.0"
authors = ["Ted Klein Bergman <tedber@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tonic = { version = "0.3", features = ["default", "codegen", "transport", "tls", "tls-roots", "prost"] }
tonic-health = "0.2.0"
prost = "0.6"
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
rustls = "0.18"
tower = "0.3"

[build-dependencies]
tonic-build = "0.3"
